[package]
name = "erf"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = { version = "0.4.1", features = ["auto-color"] }
immutable-chunkmap = "2.0.5"
lalrpop-util = { version = "0.22.0", features = ["lexer"] }
logos = "0.14.2"
malachite = "0.4.16"
malachite-float = "0.4.16"
malachite-nz = "0.4.16"
malachite-q = "0.4.16"
rowan = "0.15.16"
rustyline = "14.0.0"
thiserror = "1.0.64"
